--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Mark Schultz
 description: PhD Student in CS at UCSD
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://raw.githubusercontent.com/mark-schultz/mark-schultz.github.io/master/images/profile-pic.jpg
 #
 # Flags below are optional
 #
