--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ avatar: https://raw.githubusercontent.com/mark-schultz/mark-schultz.github.io/ma
 # Flags below are optional
 #
 
+future: true
+
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
